--- a/CSOutreach/css/cs-outreach.css
+++ b/CSOutreach/css/cs-outreach.css
@@ -81,3 +81,46 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     margin-top: 20px;
 }
+
+
+/*CSS Styles for About Us Page*/
+.missionHdr{
+    margin-bottom:58px;
+    text-align:center;
+    width:80%;
+    margin:0 auto 30px
+
+}
+
+.thumbnail{
+background-color: transparent;
+border: 0;
+text-align: center;
+padding-top: 25px;
+padding-bottom: 15px;
+margin-bottom: 35px;
+-webkit-border-radius: 8px;
+border-radius: 8px;
+margin-left:10px;
+}
+
+.thumbnail:hover {
+background-color: #FCA811;
+}
+
+
+.thumbnail .circle {
+border-radius: 50%;
+background-color: #f7f7f7;
+width: 155px;
+height: 155px;
+margin: 0 auto;
+}
+
+.thumbnail:hover h3 a {
+color: #000;
+}
+
+#footer span a{
+    color: #000;
+}
