--- a/CSOutreach/css/cs-outreach.css
+++ b/CSOutreach/css/cs-outreach.css
@@ -73,13 +73,28 @@ h1, h2, h3, h4, h5, h6 {
     color: orange;
 }
 
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: -75px;
+}
 #footer {
-    background-color: #E16F06;
-    color: white;
-    text-align: center;
-    min-height: 75px;
-    width: 100%;
-    margin-top: 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 75px;
+  background-color: #E16F06;
+  color: white;
+}
+
+.footer-container {
+    height: 100%;
 }
 
 
@@ -124,3 +139,4 @@ color: #000;
 #footer span a{
     color: #000;
 }
+
