Additional footer tweaks.

--- a/CSOutreach/css/cs-outreach.css
+++ b/CSOutreach/css/cs-outreach.css
@@ -60,8 +60,8 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 
-.carousel-cs-outreach {
-    max-height: 500px;
+#carousel-cs-outreach {
+    padding-bottom: 100px;
 }
 
 .carousel-caption {
@@ -71,30 +71,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .carousel-control {
     color: orange;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: -75px;
-}
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 75px;
-  background-color: #E16F06;
-  color: white;
-}
-
-.footer-container {
-    height: 100%;
 }
 
 
@@ -140,3 +116,45 @@ color: #000;
     color: #000;
 }
 
+/* Sticky footer styles
+-------------------------------------------------- */
+
+html, body {
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    /* The html and body elements cannot have any padding or margin. */
+}
+
+/* The top-level asp form must also be height: 100% or else the sticky footer does not work */
+#pageform {
+    height: 100%;
+}
+
+/* Wrapper for page content to push down footer */
+#wrap {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    /* Negative indent footer by it's height */
+    margin: 0 auto -75px;
+}
+
+/* Set the fixed height of the footer here */
+#push,
+#footer {
+    height: 75px;
+}
+#footer {
+    width: 100%;
+    background-color: #E16F06;
+    color: white;
+}
+
+/* Additional Table Styles */
+
+.card-table tr {
+    -webkit-box-shadow: 0px 1px 5px 0px rgba(160, 160, 160, 0.5);
+    -moz-box-shadow:    0px 1px 5px 0px rgba(160, 160, 160, 0.5);
+    box-shadow:         0px 1px 5px 0px rgba(160, 160, 160, 0.5);
+}
