--- a/CSOutreach/Site.Master
+++ b/CSOutreach/Site.Master
@@ -18,46 +18,47 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form runat="server">
-   
-    <div class="header">
-        <nav class="navbar navbar-default navbar-static-top navbar-csoutreach" role="navigation">
-            <div class="banner">
-                <div class="container banner-container">
-                    <a href="www.utdallas.edu"><img id="banner-logo" src="img/UT_Dallas_tex_rev.png" /></a>
-                    <div id="banner-title"><div class="banner-title-large"><strong>K-12 Outreach</strong></div><div class="banner-title-small">Erik Jonsson School of Engineering and Computer Science</div></div>
-                </div>
+    <form runat="server" id="pageform">
+        <div id="wrap">
+            <div class="header">
+                <nav class="navbar navbar-default navbar-static-top navbar-csoutreach" role="navigation">
+                    <div class="banner">
+                        <div class="container banner-container">
+                            <a href="www.utdallas.edu"><img id="banner-logo" src="img/UT_Dallas_tex_rev.png" /></a>
+                            <div id="banner-title"><div class="banner-title-large"><strong>K-12 Outreach</strong></div><div class="banner-title-small">Erik Jonsson School of Engineering and Computer Science</div></div>
+                        </div>
+                    </div>
+                  <div class="container">
+                    <div class="navbar-header">
+                      <button type="button" class="navbar-toggle collapsed active" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button>
+                      <a class="navbar-brand" href="Default.aspx">K-12 Outreach</a>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                      <ul class="nav navbar-nav">
+                        <li><a href="AboutUs.aspx">About Us</a></li>
+                        <%= getDynamicMenuContent() %>
+                        <li><a href="Contact.aspx">Contact Us</a></li>
+                      </ul>
+                      <ul class="nav navbar-nav navbar-right">
+                        <li class="csoutreach-loginbutton">
+                            <a href="#" id="login" runat="server" onserverclick="login_ServerClick"><span class="glyphicon glyphicon-user"></span> <%= getLoginButtonText() %></a>
+                        </li>
+                      </ul>
+                    </div><!--/.nav-collapse -->
+                  </div>
+                </nav>
             </div>
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed active" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="Default.aspx">K-12 Outreach</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="AboutUs.aspx">About Us</a></li>
-                <%= getDynamicMenuContent() %>
-                <li><a href="Contact.aspx">Contact Us</a></li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li class="csoutreach-loginbutton">
-                    <a href="#" id="login" runat="server" onserverclick="login_ServerClick"><span class="glyphicon glyphicon-user"></span> <%= getLoginButtonText() %></a>
-                </li>
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
-        </nav>
-    </div>
-
-    <div class="content container">
-        <asp:ContentPlaceHolder ID="BodyContent" runat="server">  
-        </asp:ContentPlaceHolder>
-    </div>
+            <div class="container">
+                <asp:ContentPlaceHolder ID="BodyContent" runat="server">  
+                </asp:ContentPlaceHolder>
+            </div><!-- container -->
+            <div id="push"></div>
+        </div><!-- wrap -->
     <div id="footer">
         <div class="container">
             <div class="col-sm-12 col-md-5 col2">
